[package]
name = "custom-noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = "1"
snow = "0.9.0"
async-std = { version = "1.12.0", features = ["attributes"] }
libp2p-core = { version = "0.38.0", default-features = false, features = [ ] }
libp2p-tcp = { version = "0.38.0", git = "https://github.com/libp2p/rust-libp2p", optional = true , features = [ "async-io" ]}
futures = "0.3.25"